<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="vertical" >

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1" >
	    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:paddingTop="10dp" >
	    
        <TextView
            android:id="@+id/txt_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/fromFlag"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/flag" />

                <TextView
                    android:id="@+id/fromSymbol"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/symbol"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/fromValue"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.4"
                    android:gravity="bottom|center_vertical"
                    android:hint="@string/enterValue"
                    android:inputType="number|numberDecimal"
                    android:paddingTop="-20dp"
                    android:text="@string/initialFromValue" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/swap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/swapBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/swapDesc"
                android:onClick="swapCurrencies"
                android:text="@string/swap" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/toFlag"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/flag" />

                    <TextView
                        android:id="@+id/toSymbol"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/symbol"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/conversionResult"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

		<TextView
		    android:id="@+id/eqOfOne"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dp"
		    android:background="@drawable/converterbg9"
		    android:gravity="center"
		    android:paddingBottom="10dp"
		    android:paddingTop="10dp"
		    android:textSize="22sp"
		    android:textColor="@color/white"
		    android:textStyle="bold"
		    android:scaleType="fitCenter" />
                
        </LinearLayout>
	</ScrollView>
	
        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="vertical"
            android:paddingTop="16dip"
            android:showDividers="beginning" >

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureWithLargestChild="true"
                android:orientation="horizontal"
                tools:ignore="UselessParent" >

                <LinearLayout
                    android:id="@+id/leftSpacer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/convertBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:filterTouchesWhenObscured="true"
                    android:maxLines="2"
                    android:text="@string/convert" />

                <Button
                    android:id="@+id/clearBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:filterTouchesWhenObscured="true"
                    android:maxLines="2"
                    android:onClick="resetForm"
                    android:text="@string/clear" />
                
                <LinearLayout
                    android:id="@+id/rightSpacer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>