<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    tools:ignore="NestedWeights" >

    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
        android:orientation="vertical"
    	android:background="@drawable/weatherbg9" >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <EditText
	            android:id="@+id/title"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:hint="@string/enter_note_title"
	            android:inputType="textCapSentences" >
	            <requestFocus />
	        </EditText>
	    </LinearLayout>
	
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="1dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:background="@color/white" />
	    
	    <EditText
	        android:id="@+id/body"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:ems="10"
	        android:gravity="top"
	        android:hint="@string/enter_note_body"
	        android:inputType="textCapSentences|textMultiLine"
	        android:scrollbars="vertical" />
	</LinearLayout>
    <!-- Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:paddingTop="16dip"
        android:showDividers="beginning" >

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:id="@+id/leftSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/cancelBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:onClick="cancelSaving"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/saveBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:onClick="saveNote"
                android:text="@string/confirm" />

            <LinearLayout
                android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>